--- a/css/style.css
+++ b/css/style.css
@@ -225,3 +225,29 @@ body{
     padding: 0;
     margin: 0;
   }
+
+  .content p{
+    color: white;
+    font-size: 20px;
+    padding-top: 0;
+    margin-top: 0;
+  }
+
+  .content h2{
+    color: white;
+    padding: 0;
+    margin: 0;
+    font-size: 40px;
+  }
+
+  .galery{
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .galery img{
+    width: 300px;
+    border-radius: 25px;
+  }
